# bdm-adapter

./: CMakeLists.txt  README.md  build.sh  install.sh  setup.py
include/: bdm_adapter.h
src/: bdm_adapter.cpp  main.cc
test/: test_adapter.cc
